--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="playbutton">Play</button>
         </header>
         <main class="my_main">
-            <div class="grid-container d-flex flex-wrap">
+            <div class="grid d-flex flex-wrap">
             </div>
         </main>
         <footer></footer>
