Add generating cells by playbutton

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="playbutton">Play</button>
         </header>
         <main class="my_main">
-            <div class="grid d-flex flex-wrap">
+            <div id="my_grid" class="grid d-flex flex-wrap">
 
             </div>
         </main>
