--- a/bonus/index.html
+++ b/bonus/index.html
@@ -25,7 +25,14 @@
                 <h1 class="my_title">Campo Minato</h1>
             </div>
             <div class="d-flex align-items-center">
-                
+                <div class="custom-select select-difficulty" style="width:200px;">
+                    <select>
+                      <option value="0">Select difficulty:</option>
+                      <option value="1">Easy</option>
+                      <option value="2">Medium</option>
+                      <option value="3">Hard</option>
+                    </select>
+                  </div>
                 <button class="playbutton">Play</button>
             </div>
         </header>
