--- a/bonus/index.html
+++ b/bonus/index.html
@@ -26,11 +26,11 @@
             </div>
             <div class="d-flex align-items-center">
                 <div class="custom-select select-difficulty" style="width:200px;">
-                    <select>
+                    <select class="">
                       <option value="0">Select difficulty:</option>
-                      <option value="1">Easy</option>
-                      <option value="2">Medium</option>
-                      <option value="3">Hard</option>
+                      <option class="difficulty-hard" value="1">Hard</option>
+                      <option class="difficulty-medium" value="2">Medium</option>
+                      <option class="difficulty-easy" value="3">Easy</option>
                     </select>
                   </div>
                 <button class="playbutton">Play</button>
