--- a/bonus/index.html
+++ b/bonus/index.html
@@ -21,8 +21,9 @@
 
     <body>
         <header class="d-flex justify-content-between align-items-center">
-            <div>
-                <h1 class="my_title">Campo Minato</h1>
+            <div class="d-flex align-items-center">
+                <img class="boolean-logo me-4" src="img/Logo.png" alt="Boolean logo">
+                <h1  class="my_title">Campo Minato</h1>
             </div>
             <div class="d-flex align-items-center">
                 <div class="custom-select select-difficulty" style="width:200px;">
