--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
 
             </div>
         </main>
-        <footer></footer>
+        <footer>
+            <p>
+                Made with &hearts; by <a href="#">Boolean</a>
+            </p>
+        </footer>
         <!-- JS  -->
         <script type="text/javascript" src="script/my_script.js"></script>
     </body>
